[SC-11234] fixed overlaping left menu on main content

--- a/src/app/crm/shared/common/left-menu/left-menu.component.less
+++ b/src/app/crm/shared/common/left-menu/left-menu.component.less
@@ -1,4 +1,6 @@
 :host {
+    display: block;
+    
     ::ng-deep .left-menu {
         height: calc(~"100vh - 150px") !important;
     }
